# Big-Chicken-Houdini-Intelligence-Agent

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.codex/: config.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  DIAGNOSTICS.md  HIA-MCP-V2.md  INSTALLATION.md  ROADMAP.md  SAFETY.md
houdini_package/python3.11libs/: uiready.py
houdini_package/python_panels/: hia_b4b_stairs_acceptance.pypanel  hia_ime_diagnostic.pypanel  houdini_intelligence.pypanel
launcher/HoudiniIntelligenceLauncher/: App.xaml  App.xaml.cs  HoudiniIntelligenceLauncher.csproj  ProjectRootLocator.cs
scripts/: bootstrap-runtime.ps1  build-launcher.ps1  build-release.ps1  check-public-release.py  hia-launcher.ps1  launch-houdini-21.0.440.ps1  launch-houdini.ps1  smoke_codex_app_server.py
scripts/launcher/: HiaLauncher.Core.psm1  HiaLauncher.Wpf.ps1  HiaLauncher.xaml
services/hia_mcp_v2/: pyproject.toml
services/hia_mcp_v2/hia_mcp_v2/: __init__.py  __main__.py  adapter.py  errors.py  stdio.py  tools.py  transport.py
services/houdini_mcp/: __init__.py
src/hia_core/: __init__.py  codex_protocol.py  houdini_contract.py  path_policy.py  vending_machine.py
tests/fakes/: fake_app_server.py  fake_b3_harness.py  fake_hou.py  fake_hou_b4b.py  fake_hou_write.py  fake_scene_executor.py
tests/unit/: test_b2_bridge_capability.py  test_b2c_codex_config.py  test_b3_fake_transactions.py  test_b4b_acceptance.py  test_b4b_panel_assets.py  test_bridge_client_reply.py  test_bridge_http.py  test_bridge_http_transport.py  (+34 more)
(+74 files in other folders)
