[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hia_mcp_v2"
version = "0.1.0"
description = "Houdini perception, knowledge, execution, and validation MCP for Codex"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hia_mcp_v2 = "hia_mcp_v2.__main__:main"

[tool.setuptools]
packages = ["hia_mcp_v2"]
